# g3w-admin-ps-timeseries

./: .gitignore  Makefile  Makefile.semver.mk  Makefile.venv.mk  README.md  pyproject.toml
media/project_data/qps_timeseries/: ps-time-series.qmd  ps-time-series.shp  ps-time-series.shx
media/projects/: qps_timeseries.qgs
qps_timeseries/: admin.py  apiurls.py  apps.py  config.py  forms.py  models.py  receivers.py  sitetrees.py  urls.py  views.py
qps_timeseries/api/: permissions.py  views.py
qps_timeseries/migrations/: 0001_initial.py  0002_auto_20231213_1007.py  0003_auto_20231214_1524.py  0004_alter_qpstimeserieslayer_qps_timeseries_project.py  0005_alter_qpstimeserieslayer_title_part_2.py  0006_auto_20231228_1022.py  0007_qpstimeserieslayer_std.py  0008_alter_qpstimeserieslayer_qps_timeseries_project.py
qps_timeseries/static/qps_timeseries/js/: plugin.js
qps_timeseries/templates/qps_timeseries/: layer_form.html  layers_list.html  project_form.html  projects_list.html
qps_timeseries/tests/: base.py  test_api.py
qps_timeseries/tests/data/project_data/: ps-time-series.dbf
qps_timeseries/tests/data/projects/: qps_timeseries.qgs
qps_timeseries/utils/: data.py
