[build-system]
build-backend   = "setuptools.build_meta"
requires        = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]

[project]
name            = "qps_timeseries"
dynamic         = [
    "version",              # retrieve package version from git tags
    "dependencies",         # retrieve package dependencies from requirements.txt
    "optional-dependencies" # retrieve development dependencies from requirements_dev.txt
] 
authors         = [ { name = "Gis3w snc", email = "info@gis3w.it" } ]
description     = "Insert project description here"
readme          = "README.md"
license         = { text = "Mozilla Public License 2.0 (MPL 2.0)" }
classifiers     = [
    "Development Status :: 3 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
# requires-python = ">=3.10"

[project.urls]
"Homepage"      = "https://github.com/g3w-suite/g3w-admin-ps-timeseries"
"Bug Tracker"   = "https://github.com/g3w-suite/g3w-admin-ps-timeseries/issues"

[tool.setuptools]
# packages        = ["qps_timeseries"]
# package-dir     = { g3w-admin-ps-timeseries = "qps_timeseries" }

[tool.setuptools.dynamic]
dependencies    = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev  = { file = ["requirements_dev.txt"] }

[tool.setuptools_scm]
fallback_version = "0.0.0-alpha.0"
write_to         = "_version.py" # hardcode version number in a file
#
# Or alternatively retrieve it at runtime:
# https://github.com/pypa/setuptools_scm/#retrieving-package-version-at-runtime
